[tool.poetry]
name = "langchain-openai"
version = "0.1.0"
description = ""
authors = ["jeSoosRemirez <dkhomych0091@gmail.com>"]
readme = "README.md"
packages = [{include = "langchain_openai"}]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
openai = "^0.27.7"
langchain = "^0.0.175"
fastapi = "^0.95.2"
pypdf = "^3.9.0"
chromadb = "^0.3.23"
tiktoken = "^0.4.0"
httpx = "^0.24.1"
azure-core = "^1.26.4"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.3.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
